[project]
name = "raphgpt"
version = "0.1.0"
description = "raphtlw's personal assistant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cuid2>=2.0.1",
    "fastapi[all]>=0.115.8",
    "ffmpeg-python>=0.2.0",
    "imutils>=0.5.4",
    "numpy>=2.2.3",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "python-dotenv[cli]>=1.0.1",
    "tiktoken>=0.9.0",
    "transformers>=4.49.0",
]
