[project]
name = "task-runner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.38.36",
    "celery>=5.5.3",
    "fastapi[all]>=0.115.13",
    "python-telegram-bot>=22.1",
    "redis>=6.2.0",
    "spotdl",
    "yt-dlp>=2025.6.9",
]

[tool.uv.sources]
spotdl = { git = "https://github.com/raphtlw/spotify-downloader.git" }
